--- a/sp-service.yaml
+++ b/sp-service.yaml
@@ -1,13 +1,14 @@
-kind: Service
 apiVersion: v1
+kind: Service
 metadata:
   name: shinyproxy
   namespace: shiny
 spec:
-  type: LoadBalancer
+  type: NodePort
+  ports:
+  - port: 80
+    targetPort: 8080
+    nodePort: 30092
   selector:
     run: shinyproxy
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 8080
+
