--- a/sp-authorization.yaml
+++ b/sp-authorization.yaml
@@ -1,4 +1,4 @@
-apiVersion: rbac.authorization.k8s.io/v1
+apiVersion: authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: shinyproxy-auth
@@ -9,4 +9,4 @@ subjects:
 roleRef:
   kind: ClusterRole
   name: cluster-admin
-  apiGroup: rbac.authorization.k8s.io
+  apiGroup: authorization.k8s.io
