--- a/sp-authorization.yaml
+++ b/sp-authorization.yaml
@@ -4,6 +4,7 @@ metadata:
   name: shinyproxy-auth
 subjects:
   - kind: ServiceAccount
+    name: default
     namespace: shiny
 roleRef:
   kind: ClusterRole
