--- a/sp-authorization.yaml
+++ b/sp-authorization.yaml
@@ -5,6 +5,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: default
+    namespace: shiny
 roleRef:
   kind: ClusterRole
   name: cluster-admin
