Changes done according to k8s local

--- a/sp-service.yaml
+++ b/sp-service.yaml
@@ -1,13 +1,14 @@
-apiVersion: v1
 kind: Service
+apiVersion: v1
 metadata:
   name: shinyproxy
+  namespace: shiny
 spec:
   type: NodePort
-  ports:
-  - port: 8080
-    targetPort: 8080
-    nodePort: 30092
   selector:
     run: shinyproxy
-
+  ports:
+  - protocol: TCP
+    port: 8080
+    targetPort: 8080
+    nodePort: 32092
