--- a/shinyproxy-application/application.yml
+++ b/shinyproxy-application/application.yml
@@ -17,8 +17,10 @@ proxy:
     password: Guest@123
   container-backend: kubernetes
   kubernetes:
+    namespace: shiny
     internal-networking: true
     url: http://localhost:2375
+
   specs:
   - id: 01_hello
     display-name: Hello Application
