--- a/sp-service.yaml
+++ b/sp-service.yaml
@@ -1,14 +1,13 @@
-kind: Service
 apiVersion: v1
+kind: Service
 metadata:
   name: shinyproxy
-  namespace: shiny
 spec:
   type: NodePort
+  ports:
+  - port: 8080
+    targetPort: 8080
+    nodePort: 30092
   selector:
     run: shinyproxy
-  ports:
-  - protocol: TCP
-    port: 8080
-    targetPort: 8080
-    nodePort: 32092
+
