--- a/sp-service.yaml
+++ b/sp-service.yaml
@@ -3,11 +3,10 @@ apiVersion: v1
 metadata:
   name: shinyproxy
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     run: shinyproxy
   ports:
   - protocol: TCP
-    port: 8080
+    port: 80
     targetPort: 8080
-    nodePort: 32092
