--- a/sp-service.yaml
+++ b/sp-service.yaml
@@ -3,10 +3,11 @@ apiVersion: v1
 metadata:
   name: shinyproxy
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     run: shinyproxy
   ports:
   - protocol: TCP
-    port: 80
+    port: 8080
     targetPort: 8080
+    nodePort: 80
